tests/neg/semantic_malloc_bad_type.baa
// EXPECT: نوع المعامل 1 في 'حجز_ذاكرة' غير متوافق

صحيح الرئيسية() {
    عدم* م = حجز_ذاكرة("أ").
    إرجع ٠.
}
